[package]
name = "crafting-interpreters"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.0.1", features = ["constructor"] }
getset = "0.1.6"
itertools = "0.14.0"
ordered-float = "5.1.0"
paste = "1.0.15"
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
thiserror = "2.0.17"
